--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -4,37 +4,120 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Schedule for TechCon 2024</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    header, footer {
+      background-color: #222;
+      color: white;
+      text-align: center;
+      padding: 1em 0;
+    }
+    nav {
+      margin: 10px 0;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      padding: 20px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+    caption {
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    th, td {
+      border: 1px solid #444;
+      padding: 10px;
+      text-align: left;
+    }
+    th {
+      background-color: #f4f4f4;
+    }
+  </style>
 </head>
 <body>
-  <!-- Header Section -->
+
+  <!-- Header -->
   <header>
     <h1>Schedule for TechCon 2024</h1>
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="register.html">Register</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="register.html">Register</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
-  <!-- Main Section -->
+  <!-- Main Content -->
   <main>
-    <section>
-      <table border="1">
-        <caption>Detailed Schedule of Events for TechCon 2024</caption>
-        <thead>
-          <tr>
-            <th scope="col">Time</th>
-            <th scope="col">Session</th>
-            <th scope="col">Speaker</th>
-          </tr>
-          </thead>
-      </table>
+    <table>
+      <caption>Detailed Schedule of Events for TechCon 2024</caption>
+      <thead>
+        <tr>
+          <th scope="col">Time</th>
+          <th scope="col">Session</th>
+          <th scope="col">Speaker</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>09:00 - 09:45</td>
+          <td>Opening Keynote: The Future of Tech</td>
+          <td>Dr. Ada Lovelace</td>
+        </tr>
+        <tr>
+          <td>10:00 - 11:00</td>
+          <td>AI in Everyday Life</td>
+          <td>Elon Turing</td>
+        </tr>
+        <tr>
+          <td>11:15 - 12:15</td>
+          <td>Cybersecurity Trends in 2024</td>
+          <td>Grace Hopper</td>
+        </tr>
+        <tr>
+          <td>12:30 - 13:30</td>
+          <td>Lunch Break & Networking</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>13:45 - 14:45</td>
+          <td>Building Scalable Web Apps</td>
+          <td>Linus Torvalds</td>
+        </tr>
+        <tr>
+          <td>15:00 - 16:00</td>
+          <td>Panel: Women in Tech</td>
+          <td>Panel of Experts</td>
+        </tr>
+        <tr>
+          <td>16:15 - 17:00</td>
+          <td>Closing Remarks & Future Outlook</td>
+          <td>Conference Chair</td>
+        </tr>
+      </tbody>
+    </table>
+  </main>
+
   <!-- Footer -->
-    <footer>
-        <p>&copy; 2024 TechCon. All rights reserved. Explicitly copyright.</p>
-    </footer>
+  <footer>
+    <p>&copy; 2024 TechCon. All Rights Reserved.</p>
+  </footer>
+
 </body>
 </html>
