--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -116,7 +116,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 TechCon. All Rights Reserved.</p>
+    <p>&copy; 2024 TechCon. All Rights Reserved.Explicitly copyright.</p>
   </footer>
 
 </body>
